fixed CORS to global Bean and explicitly permit OPTIONS to resolve Vercel preflight errors